syntax = "proto3";

package Account.service.v1;

option go_package = "../../internal/account/dto";

service AccountSrv {
  // 获取(创建)帐号 如果已经存在账户，则直接返回
  rpc AccountGet(AccountGetReq) returns (AccountGetResp) {};
}

message Empty {}

message AccountGetReq {
  string currency = 1; // 币种
  string uid = 2; // 用户唯一标识
  bool isAdmin = 3; // 是否渠道管理用户
  string remarks = 4; // 备注
}

message AccountGetResp {
  string address = 1; // 币种
}

enum AccountType{
  AccountType_UnUsed = 0; // 未使用
  AccountType_Used = 1; // 已使用
  AccountType_Manager = 2; // 渠道管理用户
}